--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: ReQuest
 description: Focused on Automation with a touch of creativity
-logo: "https://avatars1.githubusercontent.com/u/74914771?s=200&v=4"
+logo: "https://github.com/Request-Automation/request-automation.github.io/raw/main/asset/Asset%202request.png"
 show_downloads: "false"
